appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'MY-100 Myaskovsky Building Available'
- assertNotVisible: 'TA-101 Taneyev Building Available'
- tapOn: ' Building'
- assertVisible: ' Taneyev Building'
- tapOn: ' Taneyev Building'
- tapOn: 'Back'
- assertVisible: 'TA-101 Taneyev Building Available'
- assertNotVisible: 'MY-100 Myaskovsky Building Available'
- clearState