appId: dev.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'MY-100 Myaskovsky Building Available'
- assertNotVisible: 'TA-100 Taneyev Building Available'
- tapOn:
    id: 'search-bar'
- inputText: 'TA-100'
- assertVisible: 'TA-100 Taneyev Building Available'
- tapOn: '󰅖'
- assertVisible: 'MY-100 Myaskovsky Building Available'
- tapOn:
    id: 'search-bar'
- inputText: 'NonExistentRoom'
- assertVisible: 'No rooms found.'
- tapOn: '󰅖'
- assertVisible: 'MY-100 Myaskovsky Building Available'
- assertNotVisible: 'TA-100 Taneyev Building Available'
- scrollUntilVisible:
    element: 'TA-100 Taneyev Building Available'
- clearState
