appId: com.daria111.mobilefrontend
---
- assertVisible: 'MY-100 Myaskovsky Building Available'
- assertNotVisible: 'TA-100 Taneyev Building Available'
- tapOn: 'MY-100 Myaskovsky Building Available'
- assertNotVisible: 'Music stands'
- tapOn: 'Back'
- scrollUntilVisible:
    element: 'TA-100 Taneyev Building Available'
- tapOn: 'TA-100 Taneyev Building Available'
- assertVisible: 'Music stands'
- tapOn: 'Back'
- scrollUntilVisible:
    element: 'MY-100 Myaskovsky Building Available'
    direction: 'UP'
- tapOn: ' Tools'
- assertVisible: ' Music stands'
- tapOn: ' Music stands'
- tapOn: 'Back'
- assertNotVisible: 'MY-100 Myaskovsky Building Available'
- assertVisible: 'TA-100 Taneyev Building Available'
- clearState 

