appId: com.daria111.mobilefrontend
---
- assertVisible: 'MY-100 Myaskovsky Building Available'
- assertNotVisible: 'tane-131  Sergei Taneyev Building  Available'
- tapOn: 'MY-100 Myaskovsky Building Available'
- assertVisible: 'Classroom'
- tapOn: 'Back'
- scrollUntilVisible:
    element: 'tane-131  Sergei Taneyev Building  Available'
- tapOn: 'tane-131  Sergei Taneyev Building  Available'
- assertVisible: 'Practice room'
- tapOn: 'Back'
- tapOn: ' Type'
- tapOn: 'Search'
- inputText: 'practice'
- hideKeyboard
- assertVisible: ' Practice Room'
- longPressOn: ' Practice Room'
- tapOn: 'Back'
- assertNotVisible: 'MY-100 Myaskovsky Building Available'
- assertVisible: 'tane-131  Sergei Taneyev Building  Available'
- clearState
